# agent-template

./: .gitignore  price.md  pyproject.toml
.devcontainer/: .env
agent_template/: __init__.py
agent_template/_interface/: llm_interface.py
agent_template/_other/: llm.py  settings.py
agent_template/_other/config/: settings.py
agent_template/_other/exception/: __init__.py  exception.py
agent_template/_other/llm/: openai_llm.py
agent_template/_other/util/: __init__.py  util.py
agent_template/_type/: __init__.py  history.py  llm_responce.py  session_history.py  statement.py
agent_template/agent/: agent.py
agent_template/agents/: base_agent.py
agent_template/data/prompt/: complex_task_planning.prompt
agent_template/history/: history.py
agent_template/llm/: __init__.py  openai_llm.py
agent_template/session/: session.py
agent_template/tool/: __init__.py  base_tool.py  base_tool_v2.py
agent_template/tools/: base_tool.py
test/multi_agent/: test1.py
test/openai_llm/: test1.py  test2.py
test/simple_agent/: test1.py  test2.py  test3.py  test4.py
