[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
agent_template = ["data/**/*"]

[tool.setuptools.packages.find]
include = ["agent_template"]

[project]
name = "agent-template"
version = "0.1.0"
description = "OpenAI API ネイティブなagentを作るためのライブラリ"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Your Name", email = "your@email.com" }
]
dependencies = [
  "docstring-parser>=0.17.0",
  "openai>=0.8.0",
  "pydantic>=2.12.2",
  "pydantic-settings>=2.11.0",
  "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Fuji-no-yama/agent-template"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "S", "PTH", "RET", "ASYNC", "T201", "RUF", "G004"]
# D: ドックストリング関連
# S: 安全規則関連(picklなど)
# PTH: pathlib推奨
# RET: 戻り値の最適化
# ASYNC: 非同期関連
# T201: printの制限
# RUF: カタカナの「ノ」の制約など
# G004: loggerに対するf-string警告

# 自動修正から除外したいルールを指定
unfixable = ["F401", "E501"] # 例: 未使用importや行長制限など
